css optimize instead of class name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Start Top Banner Section -->
-    <section class="top-banner">
+    <section class="top-banner d-flex align-items-center">
         <div class="container">
             <div class="card mx-auto text-center">
                 <h1 class="text-white">Let’s Help Those Who Are More In Need</h1>
@@ -39,17 +39,17 @@
                     </p>
                 </div>
                 <div class="amount">
-                    <ul>
-                        <li><span>100tk</span></li>
-                        <li class="active"><span>200tk</span></li>
-                        <li><span>500tk</span></li>
-                        <li><span>1000tk</span></li>
-                        <li><span>500tk</span></li>
+                    <ul class="d-flex align-items-center justify-content-between">
+                        <li class="d-flex align-items-center justify-content-between"><span class="mx-auto text-gray">100tk</span></li>
+                        <li class="active d-flex align-items-center justify-content-between"><span class="mx-auto text-gray">200tk</span></li>
+                        <li class="d-flex align-items-center justify-content-between"><span class="mx-auto text-gray">500tk</span></li>
+                        <li class="d-flex align-items-center justify-content-between"><span class="mx-auto text-gray">1000tk</span></li>
+                        <li class="d-flex align-items-center justify-content-between"><span class="mx-auto text-gray">500tk</span></li>
                     </ul>
                 </div>
-                <div class="other-ammounts">
+                <div class="other-amounts">
                     <form action="#" class="text-center">
-                        <input type="text" name="amount" id="amount" placeholder="Other Amount (Taka)" />
+                        <input class="w-100 text-center" type="text" name="amount" id="amount" placeholder="Other Amount (Taka)" />
                         <button class="theme-btn" type="submit">donate now</button>
                     </form>
                 </div>
@@ -68,14 +68,14 @@
                         Your donation will support Plan Bangladesh vital work to advance food, <br> children’s education and poor family's.
                     </p>
                 </div>
-                <div class="donate-reasons">
+                <div class="donate-reasons d-flex align-items-center">
                     <div class="card">
                         <div class="card-icon">
                             <img src="./icons/food.png" alt="Food Icon" />
                         </div>
                         <div class="card-text">
                             <h3>Food for a family</h3>
-                            <p>
+                            <p class="text-gray">
                                 Girls and women are often the most impacted in a crisis. Children will bear the sickness, even after the flood has stopped. We're delivering relief assistance.
                             </p>
                         </div>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="card-text">
                             <h3>Shelter for a family</h3>
-                            <p>
+                            <p class="text-gray">
                                 When floods strike, vulnerable children, women, men, and elders are cut off from life-saving medicine, vital communication, and transport. We're delivering relief assistance.
                             </p>
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="card-text">
                             <h3>Education for a child</h3>
-                            <p>
+                            <p class="text-gray">
                                 Hundreds of educational institutions have either been closed the future of education for so many is now at risk or gone completely. We're delivering education programmes.
                             </p>
                         </div>
@@ -116,26 +116,26 @@
                     <h2>News & Articles</h2>
                     <p>Directly from the latest news and articles</p>
                 </div>
-                <div class="news-blog">
+                <div class="news-blog d-flex align-items-center justify-content-between">
                     <div class="card">
                         <div class="card-image">
-                            <img src="./images/donation0.jpg" alt="Food distribution for flood victims" />
+                            <img class="w-100" src="./images/donation0.jpg" alt="Food distribution for flood victims" />
                         </div>
                         <div class="card-body">
-                            <div class="date-info">
-                                <div class="date">
+                            <div class="date-info d-flex">
+                                <div class="date d-flex align-items-center justify-content-center">
                                     <span>14</span>
                                     <span>JUNE</span>
                                 </div>
                                 <div class="info">
                                     <h3>Food distribution</h3>
-                                    <ul>
-                                        <li>214 Comments</li>
-                                        <li> 895 Likes</li>
+                                    <ul class="d-flex align-items-center justify-content-between">
+                                        <li class="text-gray">214 Comments</li>
+                                        <li class="text-gray"> 895 Likes</li>
                                     </ul>
                                 </div>
                             </div>
-                            <p>
+                            <p class="text-gray">
                                 Food crops are under threat of being wiped out by floods across major farming and agricultural lands. 
                             </p>
                             <a class="theme-btn" href="https://www.programming-hero.com/" target="_blank">Read More</a>
@@ -143,27 +143,27 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="./images/donation1.jpg" alt="Payments (DAM) for flood victims" />
+                            <img class="w-100" src="./images/donation1.jpg" alt="Payments (DAM) for flood victims" />
                         </div>
                         <div class="card-body">
-                            <div class="date-info">
-                                <div class="date">
+                            <div class="date-info d-flex">
+                                <div class="date d-flex align-items-center justify-content-center">
                                     <span>18</span>
                                     <span>JUNE</span>
                                 </div>
                                 <div class="info">
                                     <h3>Payments (DAM)</h3>
-                                    <ul>
-                                        <li>
+                                    <ul class="d-flex align-items-center justify-content-between">
+                                        <li class="text-gray">
                                             214 Comments
                                         </li>
-                                        <li>
+                                        <li class="text-gray">
                                             895 Likes
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <p>
+                            <p class="text-gray">
                                 Dhaka Ahsania Mission (DAM) is donate to cash support and dry foods in most affected districts.
                             </p>
                             <a class="theme-btn" href="https://www.programming-hero.com/" target="_blank">Read More</a>
@@ -171,27 +171,27 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="./images/donation9.jpg" alt="WaterAid to provide pure water for flood victims" />
+                            <img class="w-100" src="./images/donation9.jpg" alt="WaterAid to provide pure water for flood victims" />
                         </div>
                         <div class="card-body">
-                            <div class="date-info">
-                                <div class="date">
+                            <div class="date-info d-flex">
+                                <div class="date d-flex align-items-center justify-content-center">
                                     <span>25</span>
                                     <span>JUNE</span>
                                 </div>
                                 <div class="info">
                                     <h3>Pure water</h3>
-                                    <ul>
-                                        <li>
+                                    <ul class="d-flex align-items-center justify-content-between">
+                                        <li class="text-gray">
                                             214 Comments
                                         </li>
-                                        <li>
+                                        <li class="text-gray">
                                             895 Likes
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <p>
+                            <p class="text-gray">
                                 WaterAid to provide stranded Bangladesh communities with drinking water 
                             </p>
                             <a href="https://www.programming-hero.com/" target="_blank" class="theme-btn">Read More</a>
@@ -213,10 +213,10 @@
                         By donating to Donate-Today Bangladesh Floods Appeal, you can provide a lifeline to the thousands of children, women, men, and elders who will face a life without their fundamental needs.
                     </p>
                 </div>
-                <div class="updates-form">
+                <div class="updates-form d-flex align-items-center justify-content-center">
                     <form action="#">
                         <input type="email" placeholder="Email" name="email" id="email" />
-                        <button type="submit" class="btn-theme">Subscribe</button>
+                        <button type="submit" class="btn-theme text-white">Subscribe</button>
                     </form>
                 </div>
             </div>
@@ -227,7 +227,7 @@
     <!-- Start Footer -->
     <footer>
         <div class="container">
-            <p class="text-center">Copyright ©2022 donate-today.com. All Rights Reserved</h3>
+            <p class="text-center text-gray">Copyright ©2022 donate-today.com. All Rights Reserved</h3>
         </div>
     </footer>
     <!-- End Footer -->
